# chat-app-backend

./: .env  .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  run.bat
DjangoProject/: asgi.py  settings.py  urls.py
DjangoProject/settings/: __init__.py  local.py  production.py
api/v1/: serializers.py  urls.py  views.py
chat_app/: admin.py  apps.py  consumers.py  models.py  routing.py  signals.py
src/: manage.py
src/apps/: urls.py
src/apps/account/: admin.py  managers.py  models.py
src/apps/account/api/: serializers.py  urls.py  views.py
src/apps/account/migrations/: 0001_initial.py  0002_remove_user_profile_profile_user.py  0003_alter_profile_username.py  0004_alter_profile_bio.py  0005_alter_user_first_name.py  0006_alter_user_last_name.py  0007_alter_profile_avatar_alter_profile_username_and_more.py  0008_user_is_staff_user_is_verified_and_more.py
src/apps/api/: urls.py
src/apps/api/v1/: serializers.py  urls.py  views.py
src/apps/chat/: admin.py  apps.py  choices.py  consumers.py  models.py  signals.py
src/apps/chat/api/: serializers.py  urls.py  views.py
src/apps/chat/migrations/: 0001_initial.py  0003_alter_chat_name.py  (+1 more)
src/apps/chat_app/: admin.py  apps.py  consumers.py  models.py  routing.py  signals.py  urls.py
src/config/: asgi.py  urls.py
src/config/middlewares/: ws_auth_middleware.py
src/config/settings/: __init__.py  base.py  local.py
src/core/: dataclasses.py  models.py
src/core/utils/: logger.py
src/core/websocket/: client.py  consumers.py  routing.py
(+7 files in other folders)
